# analyzer-r

./: .dockerignore  .gitignore  .replit  Dockerfile  agent.md  pnpm-lock.yaml  replit.nix
cryptoscope/: .dockerignore  Dockerfile  RAILWAY_REGIONS.md  docker-compose.yml  pyproject.toml  requirements.txt  start.sh
cryptoscope/app/: auth.py  config.py  i18n.py  main.py  product.py  translations.py
cryptoscope/app/api/: ai.py  auth.py  charts.py  data_view.py  favorites.py  health.py  locale.py  polymarket.py  portfolio.py  scanners.py  signals.py  ui_routes.py
cryptoscope/app/core/: ai.py  backtest.py  calculator.py  cointegration.py  direction.py  risk.py  scanners.py  signals.py
cryptoscope/app/data/: binance_ws.py  brazil.py  fetcher.py  indonesia.py  moex.py  polymarket.py  processor.py  tickers.py  us_stocks.py  yahoo_market.py
cryptoscope/app/db/: database.py  models.py  schema.py
cryptoscope/app/templates/: base.html  index.html  landing.html  onboarding.html
cryptoscope/app/ui/: templates.py
cryptoscope/data/: tinkoff_ru_2yr.csv
cryptoscope/scripts/: build_db.py  compute_analysis.py  daily_update.py  load_brazil.py  load_favorites.py  load_hourly.py  load_indonesia.py  load_ru.py  update_ru.py
cryptoscope/tests/: conftest.py  test_analysis_risk.py  test_backtest.py  test_brazil.py  test_calculator.py  test_cointegration.py  test_db.py  test_direction.py  test_fetcher.py  test_indonesia.py  test_moex.py  test_polymarket.py  test_regions.py  test_risk.py  test_signals.py  test_us_stocks.py
cryptoscope/tests/test_api/: test_auth.py  test_health.py  (+1 more)
(+43 files in other folders)
