[project]
name = "cryptoscope"
version = "1.0.0"
description = "Crypto/stock/forex pairs trading analysis terminal"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "aiohttp>=3.9.0",
    "httpx>=0.27.0",
    "pandas>=2.2.0",
    "numpy>=1.26,<2.0",
    "scipy>=1.14.0",
    "statsmodels>=0.14.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.0",
    "aiosqlite>=0.20.0",
    "httpx-sse>=0.4.0",
    "yfinance>=1.4.1,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0",
    "httpx>=0.27.0",
    "black>=24.0",
    "ruff>=0.5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["F401", "F811"]
"__init__.py" = ["F401"]
